--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -30,9 +30,10 @@
             </p>
           </ion-col>
         </div>
-        <div class="button fb_login">
+        <!-- <div class="button fb_login">
           <img src="../assets/img/btn_fb.png" (click)="showLoadingF()">
-        </div>
+        </div> -->
+        
       </ion-grid>
       <div class="espacio2">
         <div class="ion-text-center">
@@ -44,6 +45,11 @@
           <p class="sesion">Iniciar Sesión</p>
         </ion-button>
       </div>
+      <ion-col size="3">
+        <ion-button class="facebook espacio2" (click)="facebook()" >
+            <ion-icon name="logo-facebook"></ion-icon>
+        </ion-button>
+      </ion-col>
     </form>
   </div>
 </ion-content>
