--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -46,9 +46,12 @@
         </ion-button>
       </div>
       <ion-col size="3">
-        <ion-button class="facebook espacio2" (click)="facebook()" >
+        <ion-button class="facebook espacio2" (click)="loginFacebook()" >
             <ion-icon name="logo-facebook"></ion-icon>
         </ion-button>
+        <ion-button class="facebook espacio2" (click)="facebook()" >
+          <ion-icon name="logo-facebook"></ion-icon>
+      </ion-button>
       </ion-col>
     </form>
   </div>
