--- a/src/app/auth/login/login/login.page.html
+++ b/src/app/auth/login/login/login.page.html
@@ -45,14 +45,14 @@
           <p class="sesion">Iniciar Sesión</p>
         </ion-button>
       </div>
-      <ion-col size="3">
+      <!-- <ion-col size="3">
         <ion-button class="facebook espacio2" (click)="loginFacebook()" >
             <ion-icon name="logo-facebook"></ion-icon>
         </ion-button>
         <ion-button class="facebook espacio2" (click)="facebook()" >
           <ion-icon name="logo-facebook"></ion-icon>
       </ion-button>
-      </ion-col>
+      </ion-col> -->
     </form>
   </div>
 </ion-content>
